[package]

name = "monte-carlo-test"
version = "0.0.1"
authors = ["Paho Lurie-Gregg <paho@paholg.com>"]

build = "build.rs"


[dependencies]
  time = "*"
  dimensioned = { path =  "../dimensioned" }

[build-dependencies]
  tango = "*"

[[bin]]
  name = "v1-no-units"

[[bin]]
  name = "rust-units-outside"

[[bin]]
  name = "rust-units-inside"
