[package]

name = "monte-carlo-test"
version = "0.0.1"
authors = ["Paho Lurie-Gregg <paho@paholg.com>"]

build = "build.rs"


[dependencies]
  time = "*"
  dimensioned = { git =  "https://github.com/paholg/dimensioned", branch = "rmdim" }

[build-dependencies]
  tango = "*"

[[bin]]
  name = "no-units"

[[bin]]
  name = "units-outside"

[[bin]]
  name = "units-inside"
